WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12235
REGRESSION (
r18815
): Marquees do not scroll
https://bugs.webkit.org/show_bug.cgi?id=12235
Summary
REGRESSION (r18815): Marquees do not scroll
mitz
Reported
2007-01-12 17:19:56 PST
The fix for
bug 12215
broke marquee scrolling. I have a fix.
Attachments
Apply '-webkit-marquee' values in 'overflow-x' and 'overflow-y'
(1.47 KB, patch)
2007-01-12 17:22 PST
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-01-12 17:22:11 PST
Created
attachment 12405
[details]
Apply '-webkit-marquee' values in 'overflow-x' and 'overflow-y'
Mark Rowe (bdash)
Comment 2
2007-01-12 17:32:15 PST
Comment on
attachment 12405
[details]
Apply '-webkit-marquee' values in 'overflow-x' and 'overflow-y' Darin gave his approval on this on IRC.
Mark Rowe (bdash)
Comment 3
2007-01-12 17:36:42 PST
Landed in
r18821
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug