third_party/WebKit/WebCore/css/cssstyleselector.cpp
@@ -2218,6 +2218,8 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
             o = OSCROLL; break;
         case CSS_VAL_AUTO:
             o = OAUTO; break;
+        case CSS_VAL__WEBKIT_MARQUEE:
+            o = OMARQUEE; break;
         case CSS_VAL_OVERLAY:
             o = OOVERLAY; break;
         default:
@@ -2241,6 +2243,8 @@ void CSSStyleSelector::applyProperty(int id, CSSValue *value)
             o = OSCROLL; break;
         case CSS_VAL_AUTO:
             o = OAUTO; break;
+        case CSS_VAL__WEBKIT_MARQUEE:
+            o = OMARQUEE; break;
         case CSS_VAL_OVERLAY:
             o = OOVERLAY; break;
         default:
